<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.HomeFragment">

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/card_swipe_instr"
            android:layout_marginHorizontal="10dp"
            app:cardElevation="5dp"
            android:layout_marginTop="5dp"
            >
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Familiar"
                    />
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_arrow_upward_24"
                    />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Unfamiliar"
                    />
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_arrow_downward_24"
                    />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_sure"
                    />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            app:cardElevation="5dp"
            android:layout_below="@id/card_swipe_instr"
            app:contentPadding="10dp"
            >

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Word"
                    android:textSize="@dimen/font_size_large"
                    android:id="@+id/spelling"
                    android:paddingVertical="5dp"
                    />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_normal"
                    android:text="@string/tap_instr"
                    android:id="@+id/definition"
                    />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>