<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.LoginActivity"
        android:background="@color/dark_blue"
        >

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:text="@string/app_name_cap"
            android:id="@+id/login_app_name"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"

            android:fontFamily="monospace" />

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_app_name"
            android:paddingHorizontal="30dp"
            android:layout_marginTop="50dp"
            >
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=" "
                app:endIconMode="clear_text"
                android:id="@+id/iptlot_userid"
                app:boxCornerRadiusTopStart="30dp"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                >
            <com.google.android.material.textfield.TextInputEditText
                    android:hint="@string/user_id_hint"
                    android:id="@+id/edttxt_userid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_normal"
                    android:inputType="text"
                    android:backgroundTint="@color/white"
                    android:paddingVertical="10dp"
                    />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=" "
                app:endIconMode="password_toggle"
                android:layout_below="@+id/input_userid"
                app:boxCornerRadiusTopStart="30dp"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                android:id="@+id/iptlot_password"
                android:layout_marginTop="20dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                >
            <com.google.android.material.textfield.TextInputEditText
                    android:hint="@string/password_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_normal"
                    android:backgroundTint="@color/white"
                    android:inputType="textPassword"
                    android:paddingVertical="10dp"
                    android:id="@+id/edttxt_password"

                    />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_orange"
                android:textSize="@dimen/font_size_normal"
                android:text="@string/login_hint"
                android:textColor="@color/black"
                app:cornerRadius="30dp"
                android:id="@+id/btn_login"
                android:layout_marginTop="30dp"
                />
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_blue"
                    android:textSize="@dimen/font_size_small"
                    android:text="forget password"
                    android:textColor="@color/black"
                    app:cornerRadius="30dp"
                    android:layout_marginRight="10dp"
                    />
            <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_blue"
                    android:textSize="@dimen/font_size_small"
                    android:text="@string/signup_hint"
                    android:textColor="@color/black"
                    app:cornerRadius="30dp"
                    android:id="@+id/btn_signup"
                    />
        </LinearLayout>



    </LinearLayout>


</RelativeLayout>